@@ -1,3 +1,11 @@
+procps-3.3.0 --> procps-ng-3.3.1
+--------------------------------
+
+  * Fixed pgrep -u not finding processes
+  * Fixed pgrep crashing
+  * vmstat -p <part> finds partitions. Was Debian patch vmstat_part_format
+    fixes closed bugs RH#485243 and Debian#588677
+
 procps-3.2.8 --> procps-ng-3.3.0
 ------------------------------------------------------
 Debian, Fedora and openSUSE fork of procps.
